experiments/hue/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hue
spec:
  type: ClusterIP
  selector:
    app: hue
  ports:
  - name: api
    port: 8000
    targetPort: 8000
  - name: ui
    port: 8501
    targetPort: 8501
