experiments/hue/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hue-ui
spec:
  ingressClassName: traefik
  rules:
    - host: hue.x81
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hue
                port:
                  number: 8501
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hue-api
spec:
  ingressClassName: traefik
  rules:
    - host: hue-api.x81
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hue
                port:
                  number: 8000
